# WeatherService

./: Dockerfile  README.md  docker-compose.yml
src/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 2024_07_21_2112-a52a4996eca5_create_table_city_search.py
src/app/: config.py  geocoder.py  main.py  openmeteo_parser.py
src/app/database/: container.py  model.py
src/app/database/dals/: city_search_dal.py
src/app/database/services/: city_search_service.py
src/app/parsers/: geonames_parser.py  openmeteo_parser.py
src/app/routes/: api_routes.py  site_routes.py
src/app/static/css/: styles.css
src/app/static/js/: autocomplete.js  chart.js  cities_from_cookie.js  weather.js
src/app/templates/: index.html
src/app/utils/: data_preparer.py  time_helper.py
