[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Lockerio <goryunov.arkadiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
loguru = "^0.7.2"
icecream = "^2.1.3"
requests = "^2.32.3"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
